# rusty-dino

./: .gitignore  Cargo.toml
src/: main.rs
