[package]
name = "rusty-dino"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
